--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.0
+  provider: ^6.0.4
+  dio: ^4.0.6
+  http: ^0.13.5
+  
 
 dev_dependencies:
   flutter_test:
