--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   shimmer: ^2.0.0
   flutter_shimmer: ^2.1.2
   gallery_saver: ^2.3.2
-  dependencies:
   fluttertoast: ^8.1.1
   shared_preferences: ^2.0.15
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
